<resources>
    <string name="app_name">Payment</string>
    <string name="payment_title"> PAGAMENTO</string>
    <string name="remaining_text"> A PAGAR </string>
    <string name="change_text">TROCO</string>
    <string name="money_symbol"> R$ </string>
    <string name="money"> Dinheiro</string>
    <string name="card">Cartão</string>
    <string name="invalid_payment">Pagamento Inválido</string>
    <string name="invalid_payment_message">O valor total já foi alcançado.</string>
    <string name="invalid_payment_card">O valor inserido para cartão ultrapassa o valor a pagar.</string>
    <string name="cancel">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
