<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/payment_adapter"
    android:layout_width="match_parent"
    android:layout_height="40dp">

    <TextView
        android:id="@+id/payment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="100dp"
        android:text="Dinheiro"/>

    <TextView
        android:id="@+id/payment_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="100dp"
        android:text="R$ 200"/>

</RelativeLayout>
